--- a/chatty/src/pages/hello-ionic/hello-ionic.scss
+++ b/chatty/src/pages/hello-ionic/hello-ionic.scss
@@ -6,4 +6,20 @@
     font-size: 16px;
   }
 
+  .bot-message {
+    border-color: #42b9f4;
+    border-radius: 3px;
+
+    ion-card-header {
+      background-color: #42b9f4 !important;
+    }
+  }
+
+  .human-message {
+    .ion-card {
+      border-color: #42b9f4;
+      border-radius: 10px;
+    }
+  }
+
 }
